Attempt to fix scrolling issue on mobile forms

--- a/src/assets/css/onboarding-and-forms.css
+++ b/src/assets/css/onboarding-and-forms.css
@@ -18,9 +18,9 @@
 .onb-content-container {
   margin: 0 auto;
   max-width: 600px;
-  height: 100vh;
+  min-height: 100vh;
 }
-
+ 
 textarea, input[type="text"] {
   -webkit-appearance: none;
 }
@@ -1990,7 +1990,7 @@ a:visited {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .onb-heading-large {
